# simple-raytracer

./: .gitignore  Cargo.toml  config.ron  example.ron  mirrors.ron  random_scene.ron  spheres_light.ron
src/: command_line_interface.rs  fast_random.rs  main.rs
src/bounding_boxes/: mod.rs  morton_code.rs
src/camera/: mod.rs
src/hittable/: hittable_list.rs  mod.rs  quad.rs  sphere.rs  triangle.rs  volumetric.rs
src/materials/: dielectric.rs  emissive.rs  lambertian.rs  metal.rs  mod.rs  plastic.rs
src/ray/: mod.rs
src/vec3/: color.rs  mod.rs  tests.rs
src/world_loader/: mod.rs  random_scene.rs  structures.rs
