[package]
name = "simple-raytracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
rand = "0.8"
rand_core = "0.6"
rand_distr = "0.4"
rayon = "1.5"
indicatif = {version = "0.16", features = ["rayon"]}
image = "0.23"
ron = "0.6"
serde = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta"
